@@ -58,9 +58,9 @@ fi
 #
 # DO NOT MODIFY ANY OF THE FOLLOWING LINES.
 #
-LAUNCHER="$BPHOMEDIR/eclipse/plugins/org.eclipse.equinox.launcher_1.2.0.v20110502.jar"
+LAUNCHER="$BPHOMEDIR/eclipse/plugins/org.eclipse.equinox.launcher_1.3.100.v20150511-1540.jar"
 APPLICATION="org.xtuml.bp.cli.$1"
 
-$BPHOMEDIR/jre/bin/java  -d32 -Xms256m -Xmx1g -XX:MaxPermSize=256m -jar $LAUNCHER -clean -noSplash -product org.xtuml.bp.pkg.BridgePoint -data $WORKSPACE -application $APPLICATION $2 "$3" $4 "$5" $6 "$7" $8 "$9"
+$BPHOMEDIR/jre/bin/java  -d32 -Xms256m -Xmx1g -jar $LAUNCHER -clean -noSplash -product org.xtuml.bp.pkg.BridgePoint -data $WORKSPACE -application $APPLICATION $2 "$3" $4 "$5" $6 "$7" $8 "$9"
 
 exit 0
